--- a/src/sass/blocks/_benefits.scss
+++ b/src/sass/blocks/_benefits.scss
@@ -1,7 +1,7 @@
 .benefits {
     min-height: 308px;
     width: 100%;
-    padding: 15px 10px 35px 10px;
+    padding: 35px 10px 35px 10px;
     background-color: #000;
     &__wrapper {
         display: flex;
@@ -14,7 +14,7 @@
         height: 258px;
         padding: 0 20px;
         display: flex;
-        justify-content: center;
+        justify-content: start;
         flex-direction: column;
         align-items: center;
         &:first-child, &:last-child {
