--- a/src/sass/blocks/_carousel.scss
+++ b/src/sass/blocks/_carousel.scss
@@ -1,6 +1,6 @@
 .carousel {
     position: relative;
-
+    height: 320px;
     padding: 40px 0 0;
     width: 100%;
     .owl-carousel {
@@ -10,15 +10,16 @@
         cursor: move;
         .owl-dots {
             .active{
-             span{
-                background-color: red;
+                span{
+                    background-color: red;
+                }
             }
-        }
         }
         
     }
     .customPrevBtn, .customNextBtn  {
         position: absolute;
+        z-index: 10;
         top: 52%;
         transform: translateY(50%);
         left: 15px;
@@ -31,19 +32,23 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        transition: all 0.3s linear;
+        transition: all 0.4s linear;
         &:hover {
-            background-color: rgba($color: #fff, $alpha: 1);
+            background-color: rgba($color: #000, $alpha: 0.4);
         }
 
         &:active {
-            background-color: rgba($color: #000, $alpha: .3);
+            background-color: rgba($color: #fff, $alpha: .4);
+            .customNextBtn__right, .customPrevBtn__left {
+                fill: $red-color;
+            }
         }
-        img {
-           width: 17.85px;
-           height: 18.3px;
+
+        &__right, &__left {
+            width: 17.85px;
+            height: 18.3px;
+            transition: all 0.4s linear;
         }
-        z-index: 10;
     }
 
     &__item {
@@ -88,6 +93,15 @@
         margin-left: 4px;
         text-align: center;
         color: $red-color;
+    }
+
+    &__decoration {
+        margin-top: 13px;
+        width: 100%;
+        height: 66px;
+        background: rgba(255, 255, 255, 0.9);
+        box-shadow: 2px 0px 10px rgba(41, 44, 61, 0.34);
+        border-radius: 0px;
     }
 }
 
