--- a/src/sass/blocks/_company.scss
+++ b/src/sass/blocks/_company.scss
@@ -11,10 +11,12 @@
 
     }
     &__name {
-        width: 280px;
+        width: 150px;
     }
+
     img{
         display: block;
+        width: 100%;
         margin: 0 auto;
     }
 }
