--- a/src/sass/blocks/media/_media_768.scss
+++ b/src/sass/blocks/media/_media_768.scss
@@ -2,6 +2,297 @@
     .container {
         max-width: 540px;
     }
+    .header {
+        &__wrapper {
+            display: flex;
+            justify-content: space-between;
+            align-items: center
+        }
 
+        &__block {
+            display: none;
+            position: fixed;
+            width: 25%;
+            top: 82%;
+            left: -50%;
+            margin-right: 0;
+            display: flex;
+            justify-content: space-between;
+            transition: 0.6s all;
+            &-active {
+                left: 13%;
+            }
+
+            &-img {
+                fill: $red-color;
+                width: 25px;
+                height: 25px;
+                transition: all 0.4s ease-in;
+            }
+        }
+
+        &__menu {
+            position: fixed;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            margin-bottom: 30px;
+            top: 0;
+            left: -100%;
+            width: 50%;
+            height: 100vh;
+            padding: 20px 15px;
+            background-color: rgba(0,0,0, .8);
+            transition: 0.6s all;
+
+            &_active {
+                left: 0;
+            }
+               
+            &-item {
+                height: 40px;
+                width: 100%;
+                padding-right: 0;
+                border: none;
+            }
+
+            &-link {
+                display: block;
+                line-height: 42px;
+                height: 100%;
+                width: 100%;
+                color: #fff;
+                font-size: 19px;
+                padding-left: 15px;
+            }
+        }
+    }
     
+    .hamburger {
+        display: block;
+        position: absolute;
+        right: 10px;
+        top: 74%;
+        transform: translateY(-50%);
+        width: 26px;
+        height: 12px;
+        span {
+            display: block;
+            height: 2px;
+            width: 100%;
+            background-color: #000;
+            margin-bottom: 2px;
+            transition: 0.5s all;
+        }
+    
+        &_active
+            span {
+                background-color: $red-color;
+                margin-bottom: -2px;
+                &:nth-child(1) {
+                    transform: translateY(3px) rotate(-45deg); // Повертаємо на 45 градусів
+                }
+                &:nth-child(2) {
+                    display: none;
+                }
+                &:nth-child(3) {
+                    transform: translateY(3px) rotate(45deg); // Повертаємо на 45 градусів
+                }
+            }
+    }
+
+    .welcome {
+        margin-top: 65px;
+        min-height: calc(100vh - 65px);
+        &__title {
+            font-size: 28px;
+            line-height: 44px;
+        }
+
+        &__btn {
+            width: 143px;
+            font-size: 12px;
+            line-height: 35px;
+        }
+        &__descr {
+            font-size: 13px;
+        }
+        &__buttons {
+            justify-content: start;
+        }
+    }
+
+    .company {
+        &__wrapper {
+            flex-wrap: wrap;
+            justify-content: space-around;
+        }
+
+        &__name {
+            width: 125px;
+            margin: 12px 12px;
+        }
+    }
+
+
+    .offer {
+        min-height: 478px;
+        &__wrapper {
+            grid-template-columns: repeat(2,263px);
+            grid-auto-rows: 263px;
+            gap: 4px;
+        }
+        &__title {
+            font-size: 25px;
+        }
+        &__descr {
+            margin: 10px auto 0;
+            width: 530px;
+        }
+    }
+
+    .performance {
+        padding-top: 33px;
+        &__title {
+            font-size: 31px;
+        }
+        &__descr {
+            margin: 9px auto 0;
+        }
+        &__btn {
+            width: 140px;
+            font-size: 13px;
+            line-height: 32px;
+        }
+    }
+
+    .revs {
+        &__allshop {
+            display: grid;
+            grid-template: repeat(2,1fr) / repeat(2,1fr);
+            gap: 5px;
+            grid-auto-rows: auto;
+        }
+    
+        &__item {
+            width: auto;
+            
+            &-title {
+                font-size: 22px;
+            }
+   
+                &-block {
+                    grid-row: 2/3;
+                    grid-column: 1/2;
+                    padding: 0 13px 0 13px;
+                }
+        }
+                
+        &__punct {
+            &-title {
+                font-size: 20px;
+                margin-bottom: 4px;
+            }
+            &-subtitle {
+                font-size: 13px;
+            }
+        }
+
+        &__wrapper {
+            margin-top: 20px;
+            grid-template-columns: repeat(2,auto);
+            row-gap: 0;
+            grid-auto-rows: auto;
+        }
+    }
+
+    .overview {
+        padding-top: 35px;
+        &__wrapper {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(275px, 1fr));
+            grid-template-rows: 263px;
+            grid-auto-rows: 263px;
+            gap: 10px;
+
+        }
+
+        &__video {
+            width: 100%;
+            height: 262px;
+        }
+        &__title {
+            font-size: 28px;
+            margin-top: 30px;
+        }
+    }
+    .carousel {
+        padding: 40px 0 0;
+        height: 285px;
+    }
+    .owl-carousel.owl-item>img {
+        display: block;
+        width: 185px;
+    }
+
+
+    .benefits {
+        min-height: 440px;
+        padding: 18px 10px 18px 10px;
+        &__wrapper {
+            flex-wrap: wrap;
+        }
+        &__item {
+            height: 200px;
+            padding: 0 5px;
+            justify-content: center;
+            &:first-child, &:last-child {
+                padding: 0 5px;
+            }
+        }
+        &__descr {
+            margin-top: 12px;
+            font-size: 15px;
+        }
+    }
+
+    .footer {
+        &__info {
+            grid-column: 1/2;
+            //     margin-top: 30px;
+                min-height: 300px;
+            gap: 12px;
+            grid-template: minmax(230px,auto)/142px 150px 210px;
+            &-icon {
+                width: 125px;
+                align-self: center;
+            }
+        }
+        &__explore {
+            grid-column: 2/3;
+            &-icon {
+                font-size: 13px;
+            }
+        }
+        &__about{
+            &-title {
+                font-size: 18px;
+            }   
+            &-descr {
+                font-size: 13px;
+                line-height: 19px;
+            }
+        }
+        .boost {
+        //     padding: 10px 10px 20px;
+        //     align-items: end;
+        //     flex-direction: column;
+        //     flex-wrap: wrap;
+            &__service {
+                font-size: 13px;
+        //         // align-self: start;
+        //         margin-bottom: 10px;
+            }
+        }
+    }
 }
